fix overflow text in select

--- a/public/css/admin/main.css
+++ b/public/css/admin/main.css
@@ -191,3 +191,7 @@ table tbody tr:nth-child(odd) td {
 i {
   pointer-events: none;
 }
+
+.ss-main .ss-single-selected .placeholder {
+  overflow: hidden;
+}
